MailZu-ng 0.12.mailzu-ng-php72-5275fc3+1 (13.12.2022)
---------
  - Merged administrators.
  - Built in the hooks to reach the DA code but disabled by default.

MailZu-ng 0.12.mailzu-ng-php72-ec22fcc+1 (13.12.2022)
---------
  - Corrected error messages.

MailZu-ng 0.12.mailzu-ng-php72-6b7c25f+1 (12.12.2022)
---------
  - Merged administrators.
  - Fixed the send EMail to the administrator so that it now retrieves the From Address from
    the users table in the amavis database (getFromMAilAddr). For this update to work properly
    the users table needs to track the external authentication system(s).
  - Fixed invocation of the mailer class so that it does not throw external exceptions.

MailZu-ng 0.12.mailzu-ng-php72-8b9c7c5+1 (12.12.2022)
---------
  - Merged administrators.
  - Removed functions formatTime() and minutes_to_hours(). These functions appear like leftovers
    from the scheduling days.
  - Added search capabilities to quarantine search panel. It now also supports "begins with", "doesn't
    begin with", "ends with" and ""doesn't end with" search options.

MailZu-ng 0.12.mailzu-ng-php72-37e0277+1 (12.12.2022)
---------
  - Merged administrators.

MailZu-ng 0.11.mailzu-ng-php72-194398f+1 (11.11.2021)
----------
 - changes are in commit message

MailZu-ng 0.11.mailzu-ng-php72-4d31f83+1 (08.11.2021)
----------
 - changes are in commit message

MailZu-ng 0.11.mailzu-ng-php72-f4e4e93+1 (08.11.2021)
----------
 - changes are in commit message

MailZu-ng 0.11.mailzu-ng-php72-8c13f3a dynamic hash version (08.11.2021):
----------
 - PHP Header clean-ups
 - should have auto-generated version in config/init.php

MailZu-ng 0.11.mailzu-ng-php72-8c13f3a-1 pre-dynamic hash version (05.11.2021):
----------
 - Fix loading composer's autoloader
 - Fix mailmime attachment parsing, Small bugfixes
 - Resolving issue #13 with old PHPMailer, which lead to re-structure classes and libs by switching to composer, and fixing #14