@@ -1,3 +1,8 @@
+MailZu-ng 0.12.mailzu-ng-php72-02200be+1 (13.12.2022)
+---------
+  - Merged administrators.
+  - Added translations for "Block images" and "Load images".
+
 MailZu-ng 0.12.mailzu-ng-php72-5275fc3+1 (13.12.2022)
 ---------
   - Merged administrators.
